syntax = "proto3";

package smartcore.playground.api;

option go_package = "github.com/smart-core-os/sc-playground/pkg/playpb";

service PlaygroundApi {
  rpc AddDeviceTrait(AddDeviceTraitRequest) returns (AddDeviceTraitResponse);
  rpc ListSupportedTraits(ListSupportedTraitsRequest) returns (ListSupportedTraitsResponse);

  rpc AddRemoteDevice(AddRemoteDeviceRequest) returns (AddRemoteDeviceResponse);
}

message AddDeviceTraitRequest {
  string name = 1;
  string trait_name = 2;
}
message AddDeviceTraitResponse {}

message ListSupportedTraitsRequest {}
message ListSupportedTraitsResponse {
  repeated string trait_name = 1;
}

message AddRemoteDeviceRequest {
  string name = 1;
  string endpoint = 2;
  repeated string trait_name = 3;
  RemoteTLS tls = 4;
  bool insecure = 5;
}
message RemoteTLS {
  string server_ca_cert = 1;
}
message AddRemoteDeviceResponse {}
